SettingsGoogle: Fix Error Caused by java.lang.ClassCastException: androidx.preference.Preference cannot be cast to com.android.settingslib.PrimarySwitchPreference

--- a/SettingsGoogle/res/xml/accessibility_system_controls.xml
+++ b/SettingsGoogle/res/xml/accessibility_system_controls.xml
@@ -14,7 +14,7 @@
         settings:controller="com.android.settings.gestures.SystemNavigationPreferenceController"
         settings:searchable="false" />
 
-    <Preference
+    <com.android.settingslib.PrimarySwitchPreference
         android:fragment="com.android.settings.gestures.OneHandedSettings"
         android:key="gesture_system_navigation_one_handed_accessibility"
         android:persistent="false"
