--- a/SettingsGoogle/res/xml/power_usage_summary.xml
+++ b/SettingsGoogle/res/xml/power_usage_summary.xml
@@ -63,6 +63,12 @@
         settings:keywords="@string/keywords_battery_share_settings"
         settings:searchable="true" />
 
+    <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        android:key="optimized_charge_enabled"
+        android:title="@string/optimized_charge_title"
+        android:summary="@string/optimized_charge_summary"
+        android:defaultValue="false"/>
+
     <!-- Battery light -->
     <SwitchPreference
         android:key="battery_light_enabled"
