--- a/SettingsGoogle/res/xml/security_lockscreen_settings.xml
+++ b/SettingsGoogle/res/xml/security_lockscreen_settings.xml
@@ -114,6 +114,12 @@
             settings:searchable="false" />
 
         <Preference
+            android:key="pulse_ambient_light_settings"
+            android:title="@string/pulse_ambient_light_title"
+            android:summary="@string/pulse_ambient_light_summary"
+            android:fragment="com.android.settings.display.PulseAmbientLightSettings" />
+
+        <Preference
             android:key="gesture_screen_off_udfps_input_summary"
             android:title="@string/ambient_display_screen_off_udfps_title"
             android:fragment="com.android.settings.gestures.ScreenOffUdfpsSettings"
