--- a/SettingsGoogle/res/xml/security_lockscreen_settings.xml
+++ b/SettingsGoogle/res/xml/security_lockscreen_settings.xml
@@ -119,12 +119,12 @@
             android:summary="@string/pulse_ambient_light_summary"
             android:fragment="com.android.settings.display.PulseAmbientLightSettings" />
 
-        <Preference
+<!--        <Preference
             android:key="gesture_screen_off_udfps_input_summary"
             android:title="@string/ambient_display_screen_off_udfps_title"
             android:fragment="com.android.settings.gestures.ScreenOffUdfpsSettings"
             settings:searchable="false"
-            settings:controller="com.android.settings.gestures.ScreenOffUdfpsPreferenceController" />
+            settings:controller="com.android.settings.gestures.ScreenOffUdfpsPreferenceController" /> -->
 
         <SwitchPreference
             android:key="ambient_display_notification"
