--- a/SettingsGoogle/res/xml/display_settings.xml
+++ b/SettingsGoogle/res/xml/display_settings.xml
@@ -200,6 +200,13 @@
             android:summary="@string/wake_when_plugged_or_unplugged_summary"
             android:defaultValue="@*android:bool/config_unplugTurnsOnScreen" />
 
+        <!-- Screen Off UDFPS -->
+        <com.android.settings.custom.preference.SecureSettingSwitchPreference
+            android:key="screen_off_udfps_enabled"
+            android:title="@string/screen_off_udfps_title"
+            android:summary="@string/screen_off_udfps_summary"
+            android:defaultValue="false" />
+
         <ListPreference
             android:key="theme"
             android:summary="@string/summary_placeholder"
